data/tests/errors/redefinition.ng
func myFunction(_x) { myFunction = "${_x}"; };
func myFunction(_x) { myFunction = "${_x}"; };
S := ^\w+ :x { y: myFunction(x) } ^$;
